<resources>
    <string name="app_name">课堂点到器</string>
    <string name="action_settings">设置</string>
    <string name="show_list">查看记录</string>
    <string name="show_main">显示学生列表</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="late">迟到</string>
    <string name="leave">请假</string>
    <string name="absenteeism">缺勤</string>
    <string name="checked">已点到</string>
    <string name="wait">待点到</string>
</resources>
