<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luke.classnamerefactoring.StudentList">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/class_spinner">
        </Spinner>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <TextView
                    style="@style/check_text_style"
                    android:text="@string/wait"
                   />
                <LinearLayout
                    style="@style/name_LinearLayout"
                    android:id="@+id/yet_layout">
                </LinearLayout>
                <TextView
                    style="@style/check_text_style"
                    android:text="@string/late"/>
                <LinearLayout
                    style="@style/name_LinearLayout"
                    android:id="@+id/late_layout">
                </LinearLayout>
                <TextView
                    style="@style/check_text_style"
                    android:text="@string/checked"
                   />
                <LinearLayout
                    android:id="@+id/checked_layout"
                    style="@style/name_LinearLayout">
                </LinearLayout>
                <TextView
                    style="@style/check_text_style"
                    android:text="@string/leave"
                    />
                <LinearLayout
                    android:id="@+id/leave_layout"
                    style="@style/name_LinearLayout">
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/refreshFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorGreen"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/refresh"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/changeModeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blueName"
        android:background="@color/origin"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/change_mode"
        />
</FrameLayout>
